<resources>
    <string name="app_name">DemoApp</string>
    <string name="done">Done</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="details">Details</string>
    <string name="map">Map</string>
    <string name="material_qty">Material Qty</string>
    <string name="enter_material_qty">Enter Material Qty</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="break_time">Break Time</string>
    <string name="enter_break_time">Enter Break TIme</string>
    <string name="mins">mins</string>
    <string name="total_time_on_site">Total Time</string>
    <string name="signer_name">Signer Name</string>
    <string name="enter_signer_name">Enter Signer Name</string>
    <string name="customer_signature_">Customer Signature</string>
    <string name="scan_qr_code">Or Scan QR Code</string>
    <string name="scan_code">Scan Code</string>
    <string name="reject_load">Reject Load</string>
    <string name="accept_load">Cancel Reject</string>
    <string name="rate_the_driver">Rate the Driver</string>
    <string name="material_type">Material Type:</string>
    <string name="pickuup_load">Pick Up Load</string>
    <string name="drop_off_load">Drop Off Load</string>
    <string name="get_signature">get_signature</string>
    <string name="complete_job">Complete Job</string>
    <string name="customer_sign_off">Customer Sign Off</string>
    <string name="arrived_on_site">Arrived On Site</string>
    <string name="leaving_job_site">Leaving Job Site</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="po">PO#:</string>
    <string name="tbd">TBD</string>
    <string name="alliance_po">Alliance PO #:</string>
    <string name="bill_dump_fee_to">Bill Dump Fee To:</string>
    <string name="total_time">Total Time:</string>
    <string name="ticket_number">Ticket Number</string>
    <string name="enter_ticket_number">Enter Ticket Number</string>
    <string name="dump_ticket_photo">Dump Ticket Photo</string>
    <string name="take_pic">Take a Picture</string>
    <string name="bill_material_to">Bill Material To:</string>
    <string name="material_qty_yards">Material Quantity</string>
    <string name="pit_ticket_number">Pit Ticket Number</string>
    <string name="pit_ticket_photo">Pit Ticket Photo</string>
    <string name="load_number">Load No:</string>
    <string name="customer_name">Customer Name:</string>
    <string name="job_name">Job Name:</string>
    <string name="on_site_">On Site</string>
    <string name="job_site">Job Site:</string>
    <string name="signatory">Signatory:</string>
    <string name="driver_signature">Driver Signature</string>
    <string name="write_your_notes">Write Your Notes</string>
    <string name="reject_reason">Rejected Reason</string>
    <string name="labor_type">Labor Type:</string>
    <string name="no_customer_present">No Customer Present</string>
    <string name="customer_name2">Dumping Customer Name:</string>
    <string name="qty_delivered">Quantity Delivered:</string>
    <string name="pit_ticket_no">Pit Ticket No:</string>
    <string name="view_image"><u>View Image</u>></string>
    <string name="pick_up">Pick Up</string>
    <string name="drop_off">Drop Off</string>
    <string name="job">Job:</string>
    <string name="material">Material:</string>
    <string name="qty_remaining">QTY Remaining:</string>
    <string name="pay">Pay:</string>
    <string name="backhaul_pay">Backhaul Pay:</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="contact_person">Contact Person:</string>
    <string name="contact_phone">Contact Phone:</string>
    <string name="partially_completed">Partially completed load ticket in the Current section.         Please complete the current load before starting a new load.</string>
    <string name="customer1">Loading Customer</string>
    <string name="customer2">Dumping Customer</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="start_this_job">Start This Job</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="qr_code">Scan QR Code</string>
    <string name="default_material">Select Fill - Material Only</string>
    <string name="one_load">1</string>
    <string name="from_address">500\"-\"512 West Bethel Road\\r\\nCoppell, TX 75019</string>
    <string name="to_address">4718 Mountain Creek Parkway\\r\\nDallas, TX 75236</string>
    <string name="haul_on">HAULON</string>
    <string name="pit_address">Pit:</string>
    <string name="load">Load</string>
    <string name="job_site1">Loading Job Site:</string>
    <string name="job_site2">Dumping Job Site:</string>
    <string name="from_lati">32.9548</string>
    <string name="from_longi">-97.0069</string>
    <string name="to_lati">32.6869</string>
    <string name="to_longi">-96.9624</string>
    <string name="ok">Ok</string>
    <string name="warning">Warning</string>
    <string name="enter_customer_sign">Please enter the customer"'"s signature.</string>
    <string name="please_enter_signer_name">Please enter Signer Name.</string>
    <string name="please_select_the_reason">Please Select The Reason.</string>
    <string name="wrong_delivery_time">Wrong delivery time</string>
    <string name="wrong_material">Wrong material</string>
    <string name="poor_quality">Poor quality</string>
    <string name="customer_refused_delivery">Customer didn"'"t request delivery</string>
    <string name="other">Other</string>
    <string name="enter_reject_reason">Please enter the reason for rejection.</string>
    <string name="confirm_reject">Are you sure you want to reject?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirm_accept">Are you sure you want to cancel rejection?</string>
    <string name="cancel_alert">Are you sure you want to cancel?"\n"All job info will be lost.</string>
    <string name="customer_signature">Customer_Signature</string>
    <string name="invalid_qr_code">Invalid QR code.</string>
    <string name="customer_sign_off_stack">customer_sign_off</string>
    <string name="get_signature_stack">get_signature</string>
    <string name="complete_job_stack">complete_job</string>
    <string name="drop_address">Dump:</string>
    <string name="haul_off">HAULOFF</string>
    <string name="not_">N/A</string>
    <string name="please_enter_material_qty">Please enter material quantity.</string>
    <string name="please_enter_dump_ticket_number">Please enter the Dump Ticket number.</string>
    <string name="please_capture_dump_ticket_photo">Please upload a picture of the Dump Ticket.</string>
    <string name="drop_off_load_stack">drop_off_load</string>
    <string name="pickup_job_stack">pickup_job</string>
    <string name="on_site">ONSITE</string>
    <string name="wait">WAIT</string>
    <string name="waiting_address">Wait Site</string>
    <string name="success">Success</string>
    <string name="job_completed">Job Completed Successfully.</string>
    <string name="start_waiting">Start Waiting</string>
    <string name="stop_waiting">Stop Waiting</string>
    <string name="leaving_job_stack">leaving_job</string>
    <string name="on_site_complete_job_stack">on_site_complete_job</string>
    <string name="dump_ticket_no">Dump Ticket No:</string>
    <string name="dirt_deal">DIRTDEAL</string>
    <string name="loading_job">Loading Job Name:</string>
    <string name="dumping_job">Dumping Job Name:</string>
    <string name="customer_name1">Loading Customer Name:</string>
    <string name="haul_on_">Haul On</string>
    <string name="haul_off_">Haul Off</string>
    <string name="dirt_deal_">Dirt Deal</string>
    <string name="wait_">Wait</string>
    <string name="practice">Practice</string>
    <string name="practice_job_details_stack">practice_job_details</string>
    <string name="please_enter_ticket_number">Please enter the Pit Ticket number.</string>
    <string name="please_capture_pit_ticket_photo">Please upload a picture of the Pit Ticket.</string>
    <string name="on_site_address">On Site</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="breaks_time_less">Break time cannot be greater than total time.</string>
    <string name="driver_signature_image">Driver_signature</string>
    <string name="api_key">Api-Key</string>
    <string name="trucker">TRUCKER</string>
    <string name="start_time_exception">Time must be greater than</string>
    <string name="end_time_exception">Time cannot be greater than</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="close">Close</string>
    <string name="ask_location_permission">Please give permission to fetch location of your Device.</string>
    <string name="server_error">Internal Server Error</string>
    <string name="ask_for_call">Do you want to call this number?</string>
    <string name="dump">Dump:</string>

</resources>
