<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="325dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_corner"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five_dp"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:padding="@dimen/ten_dp"
        android:text="@string/please_select_the_reason"
        android:textColor="@color/text_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_gray"
        android:orientation="vertical"
        android:padding="@dimen/twenty_dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/wrong_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:button="@drawable/radio_selector"
                android:checked="true"
                android:paddingLeft="10dp"
                android:text="@string/wrong_delivery_time"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/sixteen_sp" />

            <RadioButton
                android:id="@+id/wrong_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:button="@drawable/radio_selector"
                android:paddingLeft="10dp"
                android:text="@string/wrong_material"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/sixteen_sp" />

            <RadioButton
                android:id="@+id/poor_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight="1"
                android:button="@drawable/radio_selector"
                android:paddingLeft="10dp"
                android:text="@string/poor_quality"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/sixteen_sp" />

            <RadioButton
                android:id="@+id/customer_refused"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight="1"
                android:button="@drawable/radio_selector"
                android:paddingLeft="10dp"
                android:text="@string/customer_refused_delivery"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/sixteen_sp" />

            <RadioButton
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight="1"
                android:button="@drawable/radio_selector"
                android:paddingLeft="10dp"
                android:text="@string/other"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/sixteen_sp" />

        </RadioGroup>

        <EditText
            android:id="@+id/reject_reason"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:background="@drawable/rounded_corner"
            android:gravity="fill_horizontal"
            android:hint="@string/enter_reject_reason"
            android:padding="@dimen/ten_dp"
            android:textColor="@color/text_gray"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:padding="@dimen/fifteen_dp"
        android:text="@string/confirm_reject"
        android:textColor="@color/text_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ten_dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/no_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:layout_weight="1"
            android:background="@drawable/border_rounded_croner_blue"
            android:text="@string/no"
            android:textColor="@color/blue_text" />

        <Button
            android:id="@+id/yes_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:layout_weight="1"
            android:background="@drawable/border_rounded_croner_blue"
            android:text="@string/yes"
            android:textColor="@color/blue_text" />

    </LinearLayout>
</LinearLayout>