<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:paddingBottom="@dimen/ten_dp">


    <Button
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gallery"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:padding="@dimen/ten_dp"
        android:text="@string/camera"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/blue_text" />

    <Button
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancel"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:padding="@dimen/ten_dp"
        android:text="@string/gallery"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/blue_text" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/ten_dp"
        android:gravity="center"
        android:padding="@dimen/ten_dp"
        android:text="@string/close"
        android:textColor="@color/white" />


</RelativeLayout>
