<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_corner"
    android:orientation="vertical">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five_dp"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:padding="@dimen/ten_dp"
        android:text="@string/cancel_alert"
        android:textColor="@color/text_gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ten_dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/no_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:layout_weight="1"
            android:background="@drawable/border_rounded_croner_blue"
            android:text="@string/no"
            android:textColor="@color/blue_text" />

        <Button
            android:id="@+id/yes_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:layout_weight="1"
            android:background="@drawable/border_rounded_croner_blue"
            android:text="@string/yes"
            android:textColor="@color/blue_text" />

    </LinearLayout>
</LinearLayout>